--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.24.0",
 		"react": "^17.0.2",
+		"react-dark-mode-toggle": "^0.2.0",
 		"react-dom": "^17.0.2",
 		"react-dropzone": "^11.4.2",
 		"react-scripts": "4.0.3",
